infrastructure/kubernetes/microservice/appointment-service/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: appointment-service
#   namespace: microservices
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: appointment-service
#   template:
#     metadata:
#       labels:
#         app: appointment-service
#     spec:
#       nodeName: desktop-control-plane
#       containers:
#         - name: appointment-service
#           image: huynhnhub2204958/appointment-service:latest
#           imagePullPolicy: Always  # <--- THÊM DÒNG NÀY VÀO ĐÂY
#           env:
#             - name: MONGODB_URI
#               value: "mongodb://mongo:27017/auth_db"

apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
    # Lựa chọn Node Worker cụ thể
      nodeSelector:
        kubernetes.io/hostname: my-dev-cluster-worker
      containers:
    # Bắt đầu định nghĩa Container
        - name: appointment-service
          image: huynhnhub2204958/appointment-service:latest

     # Đặt PORTS và ENV BÊN TRONG CONTAINER NÀY (Căn lề sâu hơn containers)
          ports:
            - containerPort: 3001
