infrastructure/kubernetes/microservice/appointment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: microservices
spec:
  selector:
    app: appointment-service
  ports:
    - port: 3001
      targetPort: 3001
