infrastructure/kubernetes/microservice/appointment-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointment-ingress
  namespace: microservices
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /appointment
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 3001
